2025-03-09T00:56:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13743182743 # 588
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-09
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 472 865 / 488 881
* notice: next accum: outdated-unq outdated-all / unq all: 472 865 / 490 883
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-03-08]

2025-03-08T00:51:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13732089823 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 472 865 / 486 879
* notice: next accum: outdated-unq outdated-all / unq all: 472 865 / 488 881
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-03-07]

2025-03-07T01:05:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13711469223 # 586
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-07
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 471 864 / 485 878
* notice: next accum: outdated-unq outdated-all / unq all: 472 865 / 486 879
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-21] / [2025-03-06]

2025-03-06T01:04:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13688838944 # 585