@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-09T00:56:21Z",
-  "count_outdated" : 865,
-  "uniques_outdated" : 472,
-  "count" : 883,
-  "uniques" : 490,
+  "timestamp" : "2025-03-10T00:55:08Z",
+  "count_outdated" : 866,
+  "uniques_outdated" : 473,
+  "count" : 884,
+  "uniques" : 491,
   "clones" : [
-    {
-      "timestamp": "2025-02-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-24T00:00:00Z",
       "count": 1,
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
